--- a/Selenium-Automation-Elearning-Framework-TestNG/test-output/index.html
+++ b/Selenium-Automation-Elearning-Framework-TestNG/test-output/index.html
@@ -49,7 +49,7 @@
               <ul>
                 <li>
                   <a href="#" class="navigator-link " panel-name="test-xml-Default_suite">
-                    <span>C:\Users\SaranyaNATARAJAN\AppData\Local\Temp\testng-eclipse--966282609\testng-customsuite.xml</span>
+                    <span>C:\Users\SaranyaNATARAJAN\AppData\Local\Temp\testng-eclipse-1243903563\testng-customsuite.xml</span>
                   </a> <!-- navigator-link  -->
                 </li>
                 <li>
@@ -102,7 +102,7 @@
                     <div class="method-list-content skipped suite-Default_suite">
                       <span>
                         <img width="3%" src="skipped.png"/>
-                        <a href="#" class="method navigator-link" panel-name="suite-Default_suite" title="com.training.regression.tests.LoginExcelTest" hash-for-method="loginDBTest">loginDBTest</a> <!-- method navigator-link -->
+                        <a href="#" class="method navigator-link" panel-name="suite-Default_suite" title="com.training.regression.tests.TrainerDBtest" hash-for-method="loginDBTest">loginDBTest</a> <!-- method navigator-link -->
                       </span>
                       <br/>
                     </div> <!-- method-list-content skipped suite-Default_suite -->
@@ -120,7 +120,7 @@
           <div class="suite-Default_suite-class-skipped">
             <div class="main-panel-header rounded-window-top">
               <img src="skipped.png"/>
-              <span class="class-name">com.training.regression.tests.LoginExcelTest</span>
+              <span class="class-name">com.training.regression.tests.TrainerDBtest</span>
             </div> <!-- main-panel-header rounded-window-top -->
             <div class="main-panel-content rounded-window-bottom">
               <div class="method">
@@ -128,7 +128,7 @@
                   <a name="loginDBTest">
                   </a> <!-- loginDBTest -->
                   <span class="method-name">loginDBTest</span>
-                  <div class="stack-trace">java.lang.RuntimeException: Can&apos;t invoke method public java.lang.Object[][] com.training.dataproviders.LoginDataProviders.getExcelData() on this instance of class com.training.regression.tests.LoginExcelTest due to class mismatch
+                  <div class="stack-trace">java.lang.RuntimeException: Can&apos;t invoke method public java.lang.Object[][] com.training.dataproviders.LoginDataProviders.getDBData() on this instance of class com.training.regression.tests.TrainerDBtest due to class mismatch
 	at org.testng.internal.MethodInvocationHelper.invokeMethod(MethodInvocationHelper.java:89)
 	at org.testng.internal.MethodInvocationHelper.invokeMethod(MethodInvocationHelper.java:51)
 	at org.testng.internal.MethodInvocationHelper.invokeMethodNoCheckedException(MethodInvocationHelper.java:41)
@@ -163,7 +163,7 @@
         </div> <!-- panel Default_suite -->
         <div panel-name="test-xml-Default_suite" class="panel">
           <div class="main-panel-header rounded-window-top">
-            <span class="header-content">C:\Users\SaranyaNATARAJAN\AppData\Local\Temp\testng-eclipse--966282609\testng-customsuite.xml</span>
+            <span class="header-content">C:\Users\SaranyaNATARAJAN\AppData\Local\Temp\testng-eclipse-1243903563\testng-customsuite.xml</span>
           </div> <!-- main-panel-header rounded-window-top -->
           <div class="main-panel-content rounded-window-bottom">
             <pre>
@@ -172,7 +172,7 @@
 &lt;suite guice-stage=&quot;DEVELOPMENT&quot; name=&quot;Default suite&quot;&gt;
   &lt;test verbose=&quot;2&quot; name=&quot;Default test&quot;&gt;
     &lt;classes&gt;
-      &lt;class name=&quot;com.training.regression.tests.LoginExcelTest&quot;/&gt;
+      &lt;class name=&quot;com.training.regression.tests.TrainerDBtest&quot;/&gt;
     &lt;/classes&gt;
   &lt;/test&gt; &lt;!-- Default test --&gt;
 &lt;/suite&gt; &lt;!-- Default suite --&gt;
@@ -215,7 +215,7 @@ data.addColumn('number', 'Time (ms)');
 data.addRows(1);
 data.setCell(0, 0, 0)
 data.setCell(0, 1, 'loginDBTest')
-data.setCell(0, 2, 'com.training.regression.tests.LoginExcelTest')
+data.setCell(0, 2, 'com.training.regression.tests.TrainerDBtest')
 data.setCell(0, 3, 0);
 window.suiteTableData['Default_suite']= { tableData: data, tableDiv: 'times-div-Default_suite'}
 return data;
@@ -247,7 +247,7 @@ return data;
           </div> <!-- main-panel-header rounded-window-top -->
           <div class="main-panel-content rounded-window-bottom">
             <div class="chronological-class">
-              <div class="chronological-class-name">com.training.regression.tests.LoginExcelTest</div> <!-- chronological-class-name -->
+              <div class="chronological-class-name">com.training.regression.tests.TrainerDBtest</div> <!-- chronological-class-name -->
               <div class="configuration-class before">
                 <span class="method-name">setUpBeforeClass</span>
                 <span class="method-start">0 ms</span>
